# schoologycli

./: .gitignore  README.md  SKILL.md  pyproject.toml
src/schoologycli/: __init__.py  cli.py  client.py  config.py  errors.py  fetch.py  models.py  parse.py
tests/: conftest.py  test_cli.py  test_client.py
tests/fixtures/: allday.ics  mixed.ics  timed.ics
